--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 		 alt="web_logo"/>
 	<a href="https://www.haojunlu.com">www.haojunlu.com</a>
 	|
+	<a href="https://www.luhaojun.com">www.luhaojun.com</a>
+	|
 	<a href="https://www.haojun.lu">www.haojun.lu</a>
 	|
 	<a href="https://Lst0621.github.io">Lst0621.github.io</a>
