--- a/article/reading_list.html
+++ b/article/reading_list.html
@@ -71,6 +71,15 @@
     2022
 </div>
 <br>
+
+<div class="month_style">
+    <h1>
+        2022/06
+        <br>
+    </h1>
+</div>
+<div id="books-2022-06" class="books">
+</div>
 <div class="month_style">
     <h1>
         2022/05
