add 2022 2nd half books

--- a/article/reading_list.html
+++ b/article/reading_list.html
@@ -74,12 +74,37 @@
 
 <div class="month_style">
     <h1>
+        2022/12
+        <br>
+    </h1>
+</div>
+<div id="books-2022-12" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2022/10
+        <br>
+    </h1>
+</div>
+<div id="books-2022-10" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2022/09
+        <br>
+    </h1>
+</div>
+<div id="books-2022-09" class="books">
+</div>
+<div class="month_style">
+    <h1>
         2022/06
         <br>
     </h1>
 </div>
 <div id="books-2022-06" class="books">
 </div>
+
 <div class="month_style">
     <h1>
         2022/05
