reading list align center for year/month

--- a/article/reading_list.html
+++ b/article/reading_list.html
@@ -20,9 +20,11 @@
     .year_style {
         font-size: 14pt;
         font-family: Courier;
+        text-align: center;
     }
 
     .month_style {
+        text-align: center;
     }
 
     .month_style h1 {
