Add Glider to GOL

--- a/article/gol.html
+++ b/article/gol.html
@@ -24,9 +24,10 @@
             style="border: 15px solid black;">
     </canvas>
     <br>
-    <button onclick="set_start_mode(0);restart()">Random</button>
-    <button onclick="set_start_mode(1);restart()">Pulsar</button>
-    <button onclick="set_start_mode(2);restart()">Gun</button>
+    <button onclick="set_start_mode(StartMode.Random);restart()">Random</button>
+    <button onclick="set_start_mode(StartMode.Pulsar);restart()">Pulsar</button>
+    <button onclick="set_start_mode(StartMode.Glider);restart()">Glider</button>
+    <button onclick="set_start_mode(StartMode.Gun);restart()">Gun</button>
     <br>
     <button onclick="set_topology_mode(TopologyMode.Plain)">Plane</button>
     <button onclick="set_topology_mode(TopologyMode.Mobius)">Mobius</button>
