GOL: Update Text

--- a/article/gol.html
+++ b/article/gol.html
@@ -42,7 +42,9 @@
 
 <script src="../src/game_of_life.js"></script>
 <p style="white-space:pre-wrap" >
-The game of life written in ts.
+    Conway's game of life written in typescript.
+    Different boundary conditions/topologies are provided, including Mobius Band, Torus, Klien bottle.
+    Colored boundaries are portals while grey boundaries are connected to the void.
 </p>
 <script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/src/game_of_life.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 <a href="../index.html">
