--- a/article/reading_list.html
+++ b/article/reading_list.html
@@ -69,6 +69,93 @@
     Reading List
 </h1>
 <div class="year_style">
+    2024
+</div>
+
+<div class="month_style">
+    <h1>
+        2024/11
+        <br>
+    </h1>
+</div>
+<div id="books-2024-11" class="books">
+</div>
+
+<div class="month_style">
+    <h1>
+        2024/10
+        <br>
+    </h1>
+</div>
+<div id="books-2024-10" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2024/09
+        <br>
+    </h1>
+</div>
+<div id="books-2024-09" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2024/08
+        <br>
+    </h1>
+</div>
+<div id="books-2024-08" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2024/06
+        <br>
+    </h1>
+</div>
+<div id="books-2024-06" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2024/05
+        <br>
+    </h1>
+</div>
+<div id="books-2024-05" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2024/04
+        <br>
+    </h1>
+</div>
+<div id="books-2024-04" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2024/03
+        <br>
+    </h1>
+</div>
+<div id="books-2024-03" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2024/02
+        <br>
+    </h1>
+</div>
+<div id="books-2024-02" class="books">
+</div>
+<div class="month_style">
+    <h1>
+        2024/01
+        <br>
+    </h1>
+</div>
+<div id="books-2024-01" class="books">
+</div>
+
+
+<div class="year_style">
     2023
 </div>
 <br>
