Add source code to uz

--- a/article/uz.html
+++ b/article/uz.html
@@ -39,5 +39,6 @@
 </p>
 <script src="../src/uz.js"></script>
 
+<script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/src/uz.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 </body>
 </html>
