UZ: Move to Middle.

--- a/article/uz.html
+++ b/article/uz.html
@@ -26,15 +26,16 @@
 		</span><br>
 </h1>
 <p align="center">
-    <canvas id="uz" width="800" height="600"
+    <canvas id="uz" width="480" height="480"
             style="border: 15px solid black;">
     </canvas>
 </p>
 <p align="center">
-    <canvas id="blocks" width="700" height="500"
-            style="border: 15px solid black;">
+    <canvas id="blocks" width="700" height="460"
+    >
     </canvas>
-
+</p>
+<p align="center">
     <button onclick="switch_block_mode()">Show</button>
 </p>
 <script src="../src/uz.js"></script>
