UZ: Add reset. Show Number.

--- a/article/uz.html
+++ b/article/uz.html
@@ -37,6 +37,7 @@
 </p>
 <p align="center">
     <button onclick="switch_block_mode()">Show</button>
+    <button onclick="setup()">Reset</button>
 </p>
 <script src="../src/uz.js"></script>
 
