--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
 	Reading List
 </a>
 <br>
+<a href="article/library_of_haojun.html">
+	My Book Collections
+</a>
+<br>
 <a href="article/frog_toad.html">
 	Frog & Toad
 </a>
