Cat: Read from Input

--- a/article/cartesian_product.html
+++ b/article/cartesian_product.html
@@ -20,10 +20,11 @@
 		</span><br>
 </h1>
 <p>
-
+    <label for="cat_input"></label>
+    <input type="text" id="cat_input"><br><br>
+    <button id="update_button">Update</button>
+    <br>
     <span id="cat_text"></span>
-
-
 </p>
 <script src="../lib/cartesian.js" type="module"></script>
 
