--- a/article/cartesian_product.html
+++ b/article/cartesian_product.html
@@ -27,6 +27,9 @@
     <span id="cat_text"></span>
 </p>
 <script src="../lib/cartesian.js" type="module"></script>
+<a href="../index.html">
+    Back
+</a>
 
 </body>
 </html>
