--- a/article/gol.html
+++ b/article/gol.html
@@ -34,6 +34,7 @@
     <button onclick="set_topology_mode(TopologyMode.Klein)">Klein</button>
     <button onclick="set_topology_mode(TopologyMode.Torus)">Torus</button>
     <button onclick="set_topology_mode(TopologyMode.Cylinder)">Cylinder</button>
+    <button onclick="set_topology_mode(TopologyMode.ONE_D)">1D</button>
     <br>
     <input type="checkbox" id="activate">
     <label for="activate">Allow the mouse to activate cells it points to</label>
