GOL: Update Text

--- a/article/gol.html
+++ b/article/gol.html
@@ -51,7 +51,7 @@
     Conway's game of life written in typescript.
     Different boundary conditions/topologies are provided, including Mobius Band, Torus, Klien bottle.
     Colored boundaries are portals while grey boundaries are connected to the void.
-    What you must learn is that these rules are no different that the rules of a computer system. <b>Some of them can be bent. Others can be broken.</b>
+    What you must learn is that these rules are no different than the rules of a computer system. <b>Some of them can be bent. Others can be broken.</b>
 </p>
 <script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/lib/game_of_life.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 <a href="../index.html">
