--- a/article/gol.html
+++ b/article/gol.html
@@ -52,6 +52,8 @@
     Different boundary conditions/topologies are provided, including Mobius Band, Torus, Klien bottle.
     Colored boundaries are portals while grey boundaries are connected to the void.
     What you must learn is that these rules are no different than the rules of a computer system. <b>Some of them can be bent. Others can be broken.</b>
+    <b></b>
+    Also, please check out the <a href="hex_gol.html">Game of Life in Hex Grid</a>.
 </p>
 <script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/lib/game_of_life.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 <a href="../index.html">
