--- a/article/hex_gol.html
+++ b/article/hex_gol.html
@@ -24,7 +24,7 @@
 
 <h1 style="margin-top: 10;" align="center">
 		<span id="head_span" style="font-size: 24pt">
-            Game of Life in Hex
+            Game of Life in Hex Grid
 		</span><br>
 </h1>
 
@@ -81,6 +81,12 @@
     restart();
 </script>
 
+Check out the regular
+<a href="gol.html">
+    Game of Life
+</a>
+<br>
+<br>
 <a href="../index.html">
     Back
 </a>
