Hex Dist: Add a Pause Button

--- a/article/hex_dist.html
+++ b/article/hex_dist.html
@@ -27,6 +27,8 @@
     <canvas id="hexCanvas" width="600" height="600"
             style="border: 15px solid black;">
     </canvas>
+    <br>
+    <button id="pause">Pause</button>
 </p>
 
 <script src="../lib/hex_dist_demo.js" type="module"></script>
