Multiply: Add Some Descriptions

--- a/article/multiply.html
+++ b/article/multiply.html
@@ -16,6 +16,9 @@
     </script>
 </head>
 <body>
+<h1 style="margin-top: 10;font-size: 18pt;font-weight:normal;font-family: Courier;" align="center">
+    Multiplication Table for Modular Arithmetic
+</h1>
 <p align="center">
     The perfect model of truth is the multiplication table, which is precise and certain and free from all temporal
     dross -- Bertrand Russell.
@@ -32,4 +35,5 @@
     Object.assign(window, {increment, decrement, update_table})
     update_table(6)
 </script>
+
 </body>
