Multiplication: Add Zn

--- a/article/multiply.html
+++ b/article/multiply.html
@@ -24,6 +24,10 @@
     dross -- Bertrand Russell.
 </p>
 <p align="center">
+    <span id="mul_text">
+    Multiplication for Z7
+    </span>
+    <br>
     <button onclick="increment()">+</button>
     <button onclick="decrement()">-</button>
 <table id="multiplication_table" align="center"></table>
