Square Patterns: Start

--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@
 <a href="article/multiply.html">
 	Multiplication Table
 </a>
+<br>
+<a href="article/square_patterns.html">
+	Square Patterns
+</a>
 
 </body>
 
