Square Patterns: Draw Semicircles

--- a/article/square_patterns.html
+++ b/article/square_patterns.html
@@ -23,6 +23,8 @@
     <canvas id="canvas_square_pattern" width="600" height="600"
             style="border: 15px solid black;">
     </canvas>
+    <br>
+    <button id="reset">Reset</button>
 </p>
 <script type="module" src="../lib/square_pattern.js">
 </script>
