Square Patterns: Parameter

--- a/article/square_patterns.html
+++ b/article/square_patterns.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Template</title>
+    <title>Square Patterns</title>
     <link rel="icon" href="../img/flame1.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BLVHLETMC"></script>
@@ -20,7 +20,7 @@
 
 <body>
 <p align="center">
-    <canvas id="canvas_square_pattern" width="600" height="600"
+    <canvas id="canvas_square_pattern" width="1000" height="1000"
             style="border: 15px solid black;">
     </canvas>
     <br>
