--- a/article/library_of_haojun.html
+++ b/article/library_of_haojun.html
@@ -72,8 +72,6 @@
 <h1 style="margin-top: 10;font-size: 18pt;font-weight:normal;font-family: Courier;" align="center">
     Library of Haojun
 </h1>
-<p align="center" width="200px">"Abbot Terrasson tells us that if the size of a book were measured not by the number of its 
-    pages but by the time required to understand it, then we could say about many books that they would be much 
-    shorter were they not so short." <br>--Critique of Pure Reason (1781; 1787)</p>
+<p align="center" width="200px">"Abbe Terrasson remarks with great justice that, if we estimate the size of a work, not from the number of its pages, but from the time which we require to make ourselves master of it, it may be said of many a book that it would be much shorter, if it were not so short." <br>--Critique of Pure Reason (1781; 1787)</p>
 
 <script src="../lib/library_of_hj.js" type="module"></script>
