--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
 </a>
 <br>
 <a href="article/multiply.html">
-	Multiplication Table
+	Multiplication Table for Modular Arithmetic
+</a>
+<br>
+<a href="article/multiply_permutation.html">
+	Multiplication Table for Permutation
 </a>
 <br>
 <a href="article/square_patterns.html">
