--- a/index.html
+++ b/index.html
@@ -158,8 +158,11 @@
 <a href="article/square_patterns.html">
 	Square Patterns
 </a>
-
-
+<br>
+<a href="article/permutation_product_calculator.html">
+	Permutation Product Calculator
+</a>
+<br>
 
 <h1>
 	Finance
