Perm Product Update: Adding Arrow

--- a/article/permutation_product_calculator.html
+++ b/article/permutation_product_calculator.html
@@ -24,7 +24,7 @@
 		</span><br>
 </h1>
 <p>
-    A calculator for Permutation Product.
+    A calculator for permutation product.
 </p>
 <p>
     <label for="perm_input"></label>
