--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
 	Multiplication Table for Permutation
 </a>
 <br>
+<a href="article/multiply_dihedral.html">
+	Multiplication Table for Dihedral
+</a>
+<br>
 <a href="article/square_patterns.html">
 	Square Patterns
 </a>
