Add Relation to Index

--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
 	Permutation Product Calculator
 </a>
 <br>
-
+<a href="article/set_relation.html">
+	Set Relations
+</a>
+<br>
 <h1>
 	Finance
 </h1>
