--- a/article/library_of_haojun.html
+++ b/article/library_of_haojun.html
@@ -2,6 +2,7 @@
 <head>
     <title>Library of Haojun</title>
     <link rel="icon" href="../img/flame1.png">
+    <link rel="stylesheet" href="../css/book.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BLVHLETMC"></script>
     <script>
@@ -20,53 +21,6 @@
     html * {
         background: #A5DEE4;
     }
-
-    .year_style {
-        font-size: 14pt;
-        font-family: Courier;
-        text-align: center;
-    }
-
-    .month_style {
-        text-align: center;
-    }
-
-    .month_style h1 {
-        font-size: 13pt;
-        font-family: Courier;
-        font-weight: normal;
-    }
-
-    .books {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-    }
-
-    .book {
-        text-align: center;
-        font-size: 8pt;
-        font-family: Courier;
-        width: 16%;
-    }
-
-    .book h1 {
-        align: center;
-        font-size: 10pt;
-        font-family: Courier;
-        font-weight: normal;
-    }
-
-    .book img {
-        width: 90%;
-    }
-
-    .book img:hover {
-        transform: scale(1.4);
-        transition: 0.6s;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0);
-    }
-
 </style>
 
 <h1 style="margin-top: 10;font-size: 18pt;font-weight:normal;font-family: Courier;" align="center">
