Update Code Style

--- a/article/click.html
+++ b/article/click.html
@@ -1,6 +1,7 @@
 <head>
     <title>Auto mouse click script</title>
     <link rel="icon" href="../img/flame1.png">
+    <link rel="stylesheet" href="../../css/code.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BLVHLETMC"></script>
     <script>
