--- a/article/leet/leet_2183.html
+++ b/article/leet/leet_2183.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width"/>
     <meta charset="UTF-8">
     <title>Leet 2183</title>
-    <link rel="stylesheet" href="../../css/leet.css">
+    <link rel="stylesheet" href="../../css/code.css">
     <link rel="icon" href="../../img/flame1.png">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BLVHLETMC"></script>
