--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</a>
 	<br>
 	<img class="contact_icon"
-		 src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/256/000000/external-website-advertising-kiranshastry-lineal-kiranshastry.png"
+		 src="https://img.icons8.com/?size=100&id=zrTptiWiMTtu&format=png&color=000000"
 		 alt="web_logo"/>
 	<a href="https://www.haojunlu.com">www.haojunlu.com</a>
 	|
