--- a/article/multiply_permutation.html
+++ b/article/multiply_permutation.html
@@ -30,8 +30,12 @@
     <br>
     <button onclick="increment()">+</button>
     <button onclick="decrement()">-</button>
-<table id="multiplication_table" align="center"></table>
+    <br>
 </p>
+<table id="even_multiplication_table" align="center"></table>
+<br>
+<table id="multiplication_table" align="center"></table>
+
 
 <script type="module">
     import {increment, decrement, update_table} from "../lib/permute_multiplication_table.js"
