--- a/article/multiply_dihedral.html
+++ b/article/multiply_dihedral.html
@@ -30,8 +30,10 @@
     <br>
     <button onclick="increment()">+</button>
     <button onclick="decrement()">-</button>
-<table id="multiplication_table" align="center"></table>
 </p>
+<table id="multiplication_table" align="center"></table>
+<br>
+<table id="multiplication_table_perm" align="center"></table>
 
 <script type="module">
     import {increment, decrement, update_table} from "../lib/dihedral_multiplication_table.js"
