--- a/article/tip.html
+++ b/article/tip.html
@@ -17,24 +17,21 @@
 </head>
 <body>
 <h1 style="margin-top: 10;font-size: 18pt;font-weight:normal;font-family: Courier;" align="center">
-    Tips
+    Tips Calculator
 </h1>
 <p align="center">
-    Appreciated
+    Tips Are Appreciated
 </p>
 <p align="center">
-    <span id="mul_text">
-    Tips
-    </span>
+    <label for="food">food</label>
+    <input type="number" id="food" name="food" value="30">
+    <br>
+    <label for="tax">tax</label>
+    <input type="number" id="tax" name="tax" value="3">
+    <br>
+    <button onclick="draw()">Calculate</button>
+    <br>
 </p>
-<label for="total">total</label>
-<input type="number" id="total" name="total" value="30">
-<br>
-<label for="tax">tax</label>
-<input type="number" id="tax" name="tax" value="2.7">
-<br>
-<button onclick="draw()">Calculate</button>
-<br>
 <table id="tip_table" align="center"></table>
 <br>
 
