--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
 	Multiplication Table for Dihedral
 </a>
 <br>
+<a href="article/multiply_gl.html">
+	Multiplication Table for General Linear Group
+</a>
+<br>
 <a href="article/square_patterns.html">
 	Square Patterns
 </a>
