--- a/index.html
+++ b/index.html
@@ -186,6 +186,11 @@
 <a href="article/tip.html">
 	Tip Calculator
 </a>
+<br>
+<a href="article/polynomial_properties.html">
+	Polynomial Properties
+</a>
+<br>
 <h1>
 	Finance
 </h1>
