Create Page for Strictly Piecewise

--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
 	Polynomial Properties
 </a>
 <br>
+<a href="article/sp_lang.html">
+   Strictly Piecewise Languages
+</a>
+<br>
 <h1>
 	Finance
 </h1>
