--- a/article/sp_lang.html
+++ b/article/sp_lang.html
@@ -24,9 +24,12 @@
 
 <body>
 <p align="center">
+    <span id="sp_span" style="font-size: 15pt"></span><br>
     <canvas id="canvas_id_sp" width="800" height="800"
             style="border: 15px solid black;">
     </canvas>
+    <br>
+    <span id="sp_span_2" style="font-size: 15pt;overflow-wrap: break-word"></span><br>
 </p>
 <script src="../lib/page/sp_lang.js" type="module"></script>
 <a href="../index.html">
