--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
    Strictly Piecewise Languages
 </a>
 <br>
+<a href="article/continued_fractions.html">
+	Continued Fractions
+</a>
+<br>
 <h1>
 	Finance
 </h1>
