--- a/article/sp_lang.html
+++ b/article/sp_lang.html
@@ -24,11 +24,16 @@
 
 <body>
 <p align="center">
+    <label for="sp_input"></label>
+    <input type="text" id="sp_input"><br><br>
+    <button id="update_button">Update</button>
+    <br>
     <span id="sp_span" style="font-size: 15pt"></span><br>
     <canvas id="canvas_id_sp" width="800" height="800"
             style="border: 15px solid black;">
     </canvas>
     <br>
+    <table id="multiplication_table" align="center"></table><br>
     <span id="sp_span_2" style="font-size: 15pt;overflow-wrap: break-word"></span><br>
 </p>
 <script src="../lib/page/sp_lang.js" type="module"></script>
