--- a/article/sp_lang.html
+++ b/article/sp_lang.html
@@ -33,8 +33,10 @@
             style="border: 15px solid black;">
     </canvas>
     <br>
-    <table id="multiplication_table" align="center"></table><br>
-    <span id="sp_span_2" style="font-size: 15pt;overflow-wrap: break-word"></span><br>
+<table id="multiplication_table_2" align="center"></table>
+<br>
+<table id="multiplication_table_1" align="center"></table>
+<br>
 </p>
 <script src="../lib/page/sp_lang.js" type="module"></script>
 <a href="../index.html">
