--- a/article/template.html
+++ b/article/template.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Template</title>
     <link rel="icon" href="../img/flame1.png">
@@ -28,4 +29,6 @@
 <a href="../index.html">
     Back
 </a>
+<script src="../lib/page/template.js" type="module"></script>
 </body>
+</html>
