--- a/article/lamp_lighter.html
+++ b/article/lamp_lighter.html
@@ -25,6 +25,12 @@
     </canvas>
 </p>
 
+<p align="center" style="font-family: Arial, sans-serif; color: #333; margin-top: 20px;">
+    <strong>Controls:</strong><br>
+    Use <strong>W/A/S/D</strong> to move (Up/Left/Down/Right)<br>
+    Press <strong>T</strong> to toggle lamp on/off
+</p>
+
 <a href="../index.html">
     Back
 </a>
