--- a/article/lamp_lighter.html
+++ b/article/lamp_lighter.html
@@ -31,6 +31,10 @@
     Press <strong>T</strong> to toggle lamp on/off
 </p>
 
+<p align="center" id="lamp_lighter_counter" style="font-family: Arial, sans-serif; color: #333; margin-top: 10px;">
+    Total key presses: 0
+</p>
+
 <a href="../index.html">
     Back
 </a>
