--- a/article/lamp_lighter.html
+++ b/article/lamp_lighter.html
@@ -32,9 +32,9 @@
 </p>
 
 <p align="center" id="lamp_lighter_counter" style="font-family: Arial, sans-serif; color: #333; margin-top: 10px;">
-    Total key presses: 0
+    Total moves: 0 | Lights on: 17
 </p>
-
+<script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/lib/page/lamp_lighter.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 <a href="../index.html">
     Back
 </a>
