Lamp: Update Box and Text

--- a/article/lamp_lighter.html
+++ b/article/lamp_lighter.html
@@ -24,7 +24,7 @@
 </h1>
 
 <body>
-<p align="center" style="font-family: Arial, sans-serif; color: #333; margin-top: 10px;">
+<p id="lamp_lighter_description" align="center" style="font-family: Arial, sans-serif; color: #333; margin-top: 10px;">
     A lamp lighter travelling on a $\mathbb{Z}_7 \times \mathbb{Z}_7$ grid/ donut, turning on/off lamps.<br>
     The grid with the lamps can be viewed as an element of $\{0,1\}^{\mathbb{Z}_7 \times \mathbb{Z}_7}\times(\mathbb{Z}_7 \times \mathbb{Z}_7)$.<br>
     In group theory, the lamplighter group is a special case of a wreath product.<br>
