--- a/article/lamp_lighter.html
+++ b/article/lamp_lighter.html
@@ -38,6 +38,7 @@
     <strong>Controls:</strong><br>
     Use <strong>W/A/S/D</strong> to move (Up/Left/Down/Right)<br>
     Press <strong>T</strong> to toggle lamp on/off<br>
+    Press <strong>G</strong> to toggle greedy mode (auto-solves by finding nearest lit lamp)<br>
     Try to turn off all the lamps and move to the blue box.<br>
 </p>
 
