Lamp: Diff Char for Greedy

--- a/article/lamp_lighter.html
+++ b/article/lamp_lighter.html
@@ -39,7 +39,7 @@
     Use <strong>W/A/S/D</strong> to move (Up/Left/Down/Right)<br>
     Press <strong>T</strong> to toggle lamp on/off<br>
     Press <strong>G</strong> to toggle greedy mode (auto-solves by finding nearest lit lamp)<br>
-    Try to turn off all the lamps and move to the blue box.<br>
+    Try to turn off all the lamps and move to the target box.<br>
 </p>
 
 <p align="center" id="lamp_lighter_counter" style="font-family: Arial, sans-serif; color: #333; margin-top: 10px;">
