--- a/article/routes.html
+++ b/article/routes.html
@@ -32,7 +32,10 @@
 
 <div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3231398186456999744" data-style="standard"
      data-from-embed="false"></div>
-<script src="https://strava-embeds.com/embed.js"></script>
+<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3346330263085465984" data-style="standard"
+     data-from-embed="false"></div>
+<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3345948641520886316" data-style="standard"
+     data-map-hash="10.84/37.4141/-122.1062" data-from-embed="true"></div>
 
 <script src="https://strava-embeds.com/embed.js"></script>
 
