Update Test Cases Page
Added last modified

--- a/article/test_cases.html
+++ b/article/test_cases.html
@@ -19,6 +19,12 @@
 <h1 style="margin-top: 10;font-size: 18pt;font-weight:normal;font-family: Courier;" align="center">
     Test Cases
 </h1>
+<p id="modify_time"></p>
+<script src="../src/last_modify.js"></script>
+<script>
+    get_last_modify(
+        ["article/test_cases.html", "lib/test/tests.ts", "lib/test/test_math.ts", "lib/page/test_case.ts"], "modify_time")
+</script>
 <table id="test_case_table" align="center"></table>
 
 <script type="module">
