--- a/article/routes.html
+++ b/article/routes.html
@@ -24,19 +24,20 @@
 </h1>
 <p>走不完的路，望不尽的天涯</p>
 
+<p>Bay Area</p>
 <div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3353583808164376562" data-style="standard"
-     data-map-hash="9.56/37.3503/-122.0569" data-from-embed="true" style="text-align: center"></div>
-
-<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3327197640230966052" data-style="standard"
-     data-map-hash="12.33/37.35314/-122.10026" data-from-embed="true"></div>
-
-<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3231398186456999744" data-style="standard"
      data-from-embed="false"></div>
 <div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3346330263085465984" data-style="standard"
      data-from-embed="false"></div>
-<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3345948641520886316" data-style="standard"
-     data-map-hash="10.84/37.4141/-122.1062" data-from-embed="true"></div>
-
+<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3429207280393573228" data-style="standard"
+     data-from-embed="false"></div>
+<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3429763576313782614" data-style="standard"
+     data-from-embed="false"></div>
+<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3351832393837065248" data-style="standard"
+     data-from-embed="false"></div>
+<p>San Diego</p>
+<div class="strava-embed-placeholder" data-embed-type="route" data-embed-id="3231398186456999744" data-style="standard"
+     data-from-embed="false"></div>
 <script src="https://strava-embeds.com/embed.js"></script>
 
 <a href="../index.html">
